<resources>
    <string name="app_name">Project 5</string>
    <string name="add_to_order">Add to Order</string>
    <string name="sub_total">Subtotal</string>
    <string name="milk">Milk</string>
    <string name="cream">Cream</string>
    <string name="syrup">Syrup</string>
    <string name="caramel">Caramel</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="CoffeePictureDescription">A picture of steaming hot coffee and aesthetically placed grounds</string>
    <string name="StoreOrdersDescription">A simple drawing of a shopping cart and list</string>
    <string name="store_orders">Store Orders</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="place_order">Place Order</string>
    <string name="total">Total</string>
    <string name="sales_tax">Sales Tax</string>
    <string name="order_details">Order Details</string>
    <string name="remove">Remove</string>
    <string name="arrow_right"><![CDATA[->]]></string>
    <string name="arrow_left"><![CDATA[<-]]></string>
    <string name="Donut_description">Some donuts</string>
    <string name="Main_Menu">Main Menu</string>
    <string name="Order_Details">Order Details</string>
    <string name="Order_Coffee">Order Coffee</string>
    <string name="Order_Donuts">Order Donuts</string>
    <string name="Store_Orders">Store Orders</string>


    <string name="new_line">\n</string>
    <string name="blank"></string>

    <string name="empty_remove_warning">Please select something to remove.</string>
    <string name="empty_order_warning">You have an empty order. Please select some donuts and coffee :)</string>
    <string name="order_confirmation">Order has been placed.</string>
    <string name="coffee_confirm">Coffee has been added to Order.</string>
    <string name="Empty_add_warning">Please select something to add.</string>
    <string name="Donut_confirm">Donut(s) have been added to Order.</string>
    <string name="cancelled_order">Cancelled Order</string>


    <string-array name="Coffee_Sizes">
        <item>Short</item>
        <item>Tall</item>
        <item>Grande</item>
        <item>Venti</item>
    </string-array>

    <string-array name="donutFlavorArray">
        <item>JELLY FILLED</item>
        <item>BOSTON KREME</item>
        <item>STRAWBERRY LEMON SWIRL</item>
        <item>MAPLE FROSTED</item>
        <item>BLUEBERRY CAKE</item>
        <item>ICECREAM CAKE</item>
        <item>CHOCOLOCO</item>
        <item>GLAZED</item>
        <item>BERRY BEAUTIFUL</item>
    </string-array>


    <string-array name="numDonutArray">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
</resources>